Anonymous | Login | 2021-01-15 20:59 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031833 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2020-10-09 12:50 | 2020-12-02 17:13 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.5.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031833: Visualization - dynamic highlighting does not appear within ImmediateRedraw() | ||||||||
Description | If dynamic highlighting presentation changes bounding box of the scene, it doesn't occur within ImmediateRedraw(), only after full Redraw(). This is a regression after #0029384 which added AutoZFit() call before MoveTo(): void AIS_ViewController::contextLazyMoveTo() { ... theView->AutoZFit(); theCtx->MoveTo (thePnt.x(), thePnt.y(), theView, false); ... } | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|
(0095870) git (administrator) 2020-10-09 14:16 |
Branch CR31833 has been created by kgv. SHA-1: 8e23c4f4842c00a3fb0c323fd33f0784e9689999 Detailed log of new commits: Author: kgv Date: Fri Oct 9 14:19:46 2020 +0300 0031833: Visualization - dynamic highlighting does not appear within ImmediateRedraw() AIS_ViewController::contextLazyMoveTo() now undoes Z Range changes after MoveTo(). |
(0095872) kgv (developer) 2020-10-09 15:46 |
Patch is ready for review - OCCT branch: CR31833. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31833-master-KGV/ [^] |
(0095873) osa (developer) 2020-10-09 15:57 |
The patch was reviewed |
(0096026) bugmaster (administrator) 2020-10-17 13:21 |
Combination - OCCT branch : IR-2020-10-16 master SHA - ae9f4b64cacf0df612944b3694a3bdfa5f1f29cf a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-10-16 SHA - fcb5abe005e152f7f923f4cf6c02acb07c027cdc was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18027.820000000127 / 18057.130000000117 [-0.16%] Products Total CPU difference: 12174.330000000093 / 12182.170000000115 [-0.06%] Windows-64-VC14: OCCT Total CPU difference: 19740.03125 / 19746.828125 [-0.03%] Products Total CPU difference: 13564.71875 / 13586.625 [-0.16%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0096233) git (administrator) 2020-10-24 12:42 |
Branch CR31833 has been deleted by inv. SHA-1: 8e23c4f4842c00a3fb0c323fd33f0784e9689999 |
![]() |
|||
occt: master cdfcd39b
Timestamp: 2020-10-09 11:19:46 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031833: Visualization - dynamic highlighting does not appear within ImmediateRedraw() AIS_ViewController::contextLazyMoveTo() now undoes Z Range changes after MoveTo(). |
||
mod - src/AIS/AIS_ViewController.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-10-09 12:50 | kgv | New Issue | |
2020-10-09 12:50 | kgv | Assigned To | => kgv |
2020-10-09 12:51 | kgv | Relationship added | child of 0029384 |
2020-10-09 12:52 | kgv | Description Updated | View Revisions |
2020-10-09 14:16 | git | Note Added: 0095870 | |
2020-10-09 15:46 | kgv | Note Added: 0095872 | |
2020-10-09 15:46 | kgv | Assigned To | kgv => osa |
2020-10-09 15:46 | kgv | Status | new => resolved |
2020-10-09 15:57 | osa | Note Added: 0095873 | |
2020-10-09 15:57 | osa | Assigned To | osa => bugmaster |
2020-10-09 15:57 | osa | Status | resolved => reviewed |
2020-10-17 13:21 | bugmaster | Note Added: 0096026 | |
2020-10-17 13:21 | bugmaster | Status | reviewed => tested |
2020-10-17 13:25 | bugmaster | Test case number | => Not required |
2020-10-17 13:31 | bugmaster | Changeset attached | => occt master cdfcd39b |
2020-10-17 13:31 | bugmaster | Status | tested => verified |
2020-10-17 13:31 | bugmaster | Resolution | open => fixed |
2020-10-24 12:42 | git | Note Added: 0096233 | |
2020-12-02 16:22 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |