0031833: Visualization - dynamic highlighting does not appear within ImmediateRedraw()

AIS_ViewController::contextLazyMoveTo() now undoes Z Range changes after MoveTo().